--- a/src/CanvasManifest.json
+++ b/src/CanvasManifest.json
@@ -67,6 +67,7 @@
       "improvedtabstopbehavior": false,
       "isemptyrequirestableargument": true,
       "keeprecentscreensloaded": false,
+      "legacyformulabar": false,
       "longlivingcache": false,
       "mobilenativerendering": false,
       "nativecdsexperimental": true,
@@ -79,7 +80,6 @@
       "powerfxv1": false,
       "primaryoutputpropertycoerciondeprecated": true,
       "projectionmapping": true,
-      "reactformulabar": true,
       "reliableconcurrent": true,
       "reservedkeywords": false,
       "rtlinstudiopreview": false,
@@ -116,7 +116,7 @@
     "Id": "20d7c6b4-ffd8-4fd9-97ec-66c0b10795fb",
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "",
-    "ManualOfflineProfileId": null,
+    "ManualOfflineProfileId": "",
     "Name": "Git Test",
     "OriginatingVersion": "1.342",
     "ParserErrorCount": 0,
